--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 jar {
-    baseName = 'paas-ta-portal-log-api'
+    archivesBaseName = 'paas-ta-portal-log-api'
 }
 
 sourceCompatibility = 1.8
